--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -38,6 +38,11 @@
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
                         </configuration>
+                        <dependency>
+                            <groupId>org.mindrot</groupId>
+                            <artifactId>jbcrypt</artifactId>
+                            <version>0.4</version>
+                        </dependency>
                     </execution>
                 </executions>
             </plugin>
