--- a/client/pom.xml
+++ b/client/pom.xml
@@ -63,6 +63,24 @@
             <artifactId>tyrus-standalone-client</artifactId>
             <version>1.15</version>
         </dependency>
+        <dependency>
+            <groupId>edu.byu.cs240</groupId>
+            <artifactId>passoff-dependencies</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.byu.cs240</groupId>
+            <artifactId>passoff-dependencies</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.byu.cs240</groupId>
+            <artifactId>passoff-dependencies</artifactId>
+            <version>1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
